src/objects/SALT_Product__c.object
<CustomObject>
    <description>This object will capture the products that are purchased by schools from SALT</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cost__c</fullName>
        <description>This field will capture the cost of the product</description>
        <label>Cost</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>This field will capture the product item description</description>
        <label>Product Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Family__c</fullName>
        <description>This field will capture the family to which the product belongs</description>
        <label>Product Family</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Printed Materials</fullName>
                </value>
                <value>
                    <fullName>Premiums</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ShortDescription__c</fullName>
        <description>This field will capture the product short description</description>
        <label>Product Short Description</label>
        <type>TextArea</type>
    </fields>
    <label>SALT Product</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>Cost__c</columns>
        <columns>Description__c</columns>
        <columns>ShortDescription__c</columns>
        <columns>Family__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>SALT Item Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SALT Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>